--- a/proposal.tex
+++ b/proposal.tex
@@ -1,4 +1,4 @@
-\title{Crowdsourced Residential Power Quality Event Detection in the Smart Grid.}
+\title{Design, implementation, and evaluation of Napali: a novel distributed sensor network for improved power quality monitoring.}
 \author{
         Sergey Negrashov \\
                 Department of Information and Computer Science\\
