Edge computing almoust done

--- a/proposal.bib
+++ b/proposal.bib
@@ -57,3 +57,39 @@ month={June},}
   author={Peisert, S and Gentz, R and Boverhof, J and McParland, C and Engle, S and Elbashandy, A and Gunter, D},
   year={2017}
 }
+
+@article{satyanarayanan2017emergence,
+  title={The emergence of edge computing},
+  author={Satyanarayanan, Mahadev},
+  journal={Computer},
+  volume={50},
+  number={1},
+  pages={30--39},
+  year={2017},
+  publisher={IEEE}
+}
+
+@online{forbesiot,
+  title = {IoT Market Predicted To Double By 2021, Reaching \$520B},
+  url = {https://www.forbes.com/sites/louiscolumbus/2018/08/16/iot-market-predicted-to-double-by-2021-reaching-520b/#734d45911f94},
+  note = {Accessed: 2018-09-30}
+}
+
+@misc{gagliardi2011content,
+  title={Content delivery network},
+  author={Gagliardi, Joshua D and Munger, Timothy S},
+  year={2011},
+  month=jun # "~14",
+  publisher={Google Patents},
+  note={US Patent 7,962,580}
+}
+
+@article{edgeiot,
+author = {Sun, Xiang and Ansari, Nirwan},
+year = {2016},
+month = {12},
+pages = {22-29},
+title = {EdgeIoT: Mobile Edge Computing for the Internet of Things},
+volume = {54},
+booktitle = {IEEE Communications Magazine}
+}
