--- a/litreview.tex
+++ b/litreview.tex
@@ -1,19 +1,30 @@
 \section{Edge computing}
-Edge computing is a subset of IOT research, which concerns itself with distributing the computational load across the devices at the edge of the of the network. Projections performed by forbes suggest that by 2025, more then 75 billion IOT devices will be connected to the Internet. As the devices at the edge become more computationally capable and more numerous, it becomes imperative to share the computational load not only across the cloud services, but across the devices themselves. Furthermore a large portion of these devices, such as home automation, do not require a connection to the cloud in the first place. Instead they require a connection to the edge IOT hub, or need the cloud service only to establish or broker communication with another IOT device.
+Projections performed by forbes suggest that by 2025, more then 75 billion IOT devices will be connected to the Internet.\cite{forbesiot} As the devices at the edge become more computationally capable and more numerous, it becomes imperative to share the computational load not only across the cloud services, but across the devices themselves. Furthermore a large portion of these devices, such as home automation, do not require a connection to the cloud in the first place. Instead they require a connection to the edge IOT hub, or need the cloud service only to establish or broker communication with another IOT device. Edge computing is a subset of IOT research, which concerns itself with distributing the computational load across the devices at the edge of the of the network. \cite{satyanarayanan2017emergence}
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{img/iot_statistics.pdf}	
-	\caption{Projected number of IOT devices worldwide}.
+	\caption{Projected number of IOT devices worldwide.\cite{forbesiot}}
 	\label{lit:fig:1}
 \end{figure}
 
-This change in communication strategy may seem inconsequential at first. However, upon deeper reflection in becomes clear that this is a major paradigm shift which brings IOT closer to the sensor network world it is often compared with. While the pioneering work in the IOT always assumed a one or two way communication between the IOT device and the cloud service, utilizing TCP/IP as an end-to-end protocol, it is becoming clear that this approach is unsustainable, and is often undesirable. This communication model has clear disadvantages in wasted communication, computation, and privacy. Furthermore the rigid computation communication model is not flexible enough to support devices which are beyond the edge of the TCP/IP network without an AD-HOC routing. 
+This change in computational strategy may seem inconsequential at first. However, upon deeper reflection in becomes clear that this is a major paradigm shift which brings IOT closer to the sensor network world it is often compared with. While the pioneering work in the IOT always assumed a one or two way communication between the IOT device and the cloud service, utilizing TCP/IP as an end-to-end protocol, it is becoming clear that this approach is unsustainable, and is often undesirable. This communication model has clear disadvantages in wasted communication, computation, and privacy. Furthermore the rigid computation communication model is not flexible enough to support devices which are beyond the edge of the TCP/IP network without an AD-HOC routing. \cite{gagliardi2011content}
 
-The first attempt to address the bandwidth and latency issues arising with the widespread IOT adoption came in form of content delivery networks(CDNs). CDNs circumvent the generic cloud information delivery problems by placing transparent caches geographically spread across the application domain as shown in figure \ref{lit:fig:2}. When a user or an IOT device makes a request for on object, this request is forwarded to the nearest CDN node for processing. If the node contains the object in it's cache it is immediately forwarded to the requestee. Otherwise a request for the object is forwarded to the centralized cloud data store, and returned to the requesting device, as well as placed in the local cache. This approach has the advantage of moving the data closer to the end user, thus reducing latency, and taking advantage of the geographical locality. Another advantage of this method, is the added resiliency of the CDN architecture to single point failure. If a local cache node fails, it`s userbase, can be forwarded to another node, although encoring additional latency. Additionally if a centralized data store becomes unreachable, the local cache nodes can to some extent mask it's outage by forwarding the data available locally. This approach does have some drawbacks. While it makes it easier to enable faster transactions regarding data, it is not trivial to move application logic to the local cache nodes. Furthermore, CDN methodology, still relies on a central mediator for device communication, even if the devices are located in the same room. 
+The first attempt to address the bandwidth and latency issues arising with the widespread IOT adoption came in form of content delivery networks(CDNs).\cite{gagliardi2011content} CDNs circumvent the generic cloud information delivery problems by placing transparent caches geographically spread across the application domain as shown in figure \ref{lit:fig:2}. When a user or an IOT device makes a request for on object, this request is forwarded to the nearest CDN node for processing. If the node contains the object in it's cache it is immediately forwarded to the requestee. Otherwise a request for the object is forwarded to the centralized cloud data store, and returned to the requesting device, as well as placed in the local cache. This approach has the advantage of moving the data closer to the end user, thus reducing latency, and taking advantage of the geographical locality. Another advantage of this method, is the added resiliency of the CDN architecture to single point failure. If a local cache node fails, it`s userbase, can be forwarded to another node, although encoring additional latency. Additionally if a centralized data store becomes unreachable, the local cache nodes can to some extent mask it's outage by forwarding the data available locally. This approach does have some drawbacks. While it makes it easier to enable faster transactions regarding data, it is not trivial to move application logic to the local cache nodes. Furthermore, CDN methodology, still relies on a central mediator for device communication, even if the devices are located in the same room. 
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.6\linewidth]{img/cdn.png}	
-	\caption{Content delivery network architecture. As described in the Google pattent.}.
+	\caption{Content delivery network architecture. As described in the Google pattent.\cite{gagliardi2011content}}
 	\label{lit:fig:2}
 \end{figure}
+
+In an attempt to support a more diverse IOT ecosystem, current research is focused on moving the cloud service ever closer to the edge of the network. Since the majority of the IOT devices are located withing one hop of the Internet, the next logical place to locate a content provider is at the wireless basestation.\cite{satyanarayanan2017emergence} These servers, commonly referred to as cloudlets or fog servers, are collocated with various wireless basestation, which allows them to provide a location specific service to the user without using the Internet. This approach also provides uniform access and simplifies intercommunication between a variety of devices, including those that don't use TCP/IP. Unlike the localized cloud cache approach relied on by the CDNs, fog servers are build with the notion of moving not only data but also the application logic to the edge of the network. To facilitate inter-device communication between the devices using differing wireless protocols fog servers can no longer rely on TCP/IP routing. Instead, TCP/IP becomes yet another transfer protocol along with bluetooth, zigbee, 3g etc , with routing between the devices implemented as a software service.\cite{edgeiot} A few use-cases of such technology are already found in industry. Examples of these include airline/bus in-flight entertainment, and shopping mall directory apps. An block diagram of this infrastructure is shown in figure \ref{lit:fig:3}. In the future emerging technologies which are sensitive to latency, such as virtual and augmented reality will benefit from fog computing, since it's inherently lower latency then the cloud counterparts.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.6\linewidth]{img/fog_comp.png}	
+	\caption{Fog computing use in transportation. The bus cloudlet provides a cache for common data such as commuter schedules and traffic information, while routing other queries to the Internet.\cite{edgeiot}}
+	\label{lit:fig:3}
+\end{figure}
+
+
