lit review first complete draft

--- a/litreview.tex
+++ b/litreview.tex
@@ -27,4 +27,24 @@ In an attempt to support a more diverse IOT ecosystem, current research is focus
 	\label{lit:fig:3}
 \end{figure}
 
+With the architecture for low latency communication between the edge devices and the fog provider established, the state of the art in the edge computing research is focused in intelligent sharing of the computational resources in the fog system. Edge servers generally have a few orders more of computational capacity then the edge device, however, they service many such devices. Additionally due to the fickle nature of radio links connecting the edge device to the fog service, the work sharing protocol must be able able to cope with link and packet loss. Finally in case of the battery powered devices the energy cost of transmitting the computational job, and receiving its result may exceed the cost of performing the computation locally. Finally, with mobile edge nodes, such as smart phones, and smart cars, computational offloading algorithms mush be able to handle constant network reconfigurations as the edge nodes enter and leave the fog server geographical area. A number of algorithms have been proposed for efficient and robust computational sharing in the fog environments. \cite{oueis2015fog} \cite{wang2015mobiscud} \cite{wang2013mobile}
 
+Napali fits in between the CDN and Fog server architectures. The power quality disturbances are generally localized to a specific area, so a sink placement which covers a small geographical area are preferred in order to reduce latency and reduce unnecessary communication with the centralized cloud location. Furthermore, sink driven measurement rate allows the OPQBox to dynamically scale the computational and communication overhead. Finally the event, classification and analysis are similar to the computational offloading strategies currently under development in the edge computing field.
+
+\section{Distributed Power Quality Monitoring}
+
+Power quality monitoring is a long established field in the smart grid domain. However, the vast majority of research so far has been focused on single point power quality monitoring.\cite{silva2017development} Such research has extremely useful applications in industry, since it allows to ascertain the absolute quality of the delivered power at a given location. However, since the power quality disturbances originate both from local sources, and gridwide disturbances single point monitoring is not particularly useful for smart grid research. Several projects have developed a distributed approach to power quality monitoring, the most prominent being the FNet project and the Power Standard Lab pqube deployment. 
+
+The FNet project designed, manufactured and deployed a Phase Measuremnt Unit(PMU), across over 300 locations across the united states.\cite{zhang2010wide} PMU devices plug into an outlet, and sample the power line voltage at the rate of about 1.5kS/s. The sampling is disciplined by GPS, and as such FNet devices are extremely sensitive to voltage frequency and phase angle. The precision of the FNet devices is $~0.5mHz$ for frequency and $0.02^{\circ}$ for phase angle. Collected data is sent to the collection service at 100ms intervals via the Ethernet connection. Using these devices FNet was able to observe several large power disturbances in the US power grid. The robustness and sensitivity afforded by the GPS reciever makes this project an excellent source of frequency data across large geographical area, however,  the sampling rate of 25sampler per grid cycle is far too low to properly sample fast transients and sags. Furthermore, FNet provides no methodology for acquiring raw data for event disturbances which it records.
+
+Power Standards Lab(PSL) has been an industry leader in power quality monitoring, authoring several standards on the topic. Furthermore PSL has developed and deployed a large number of power quality monitors called PQube across the world. The exact number of deployed devices is uncertain since a lot of the devices are deployed industrially and are not available to the public. However PSL has several publicly available devices, as well as several PQ datasets accessable for smart grid researchers. PQube devices are an industry standard for power quality monitoring, sampling at $12.8kSps$ for both the voltage and current waveforms.\cite{pqube_spec} Each PQube device is supplied with a NIST certificate of compliance and complies with the IEC 61000-4-7:2002 standard for PQ measurements. Incidentally, this standard was authored in part by the PSL staff. Similarly to the FNet PMU, PQube devices are GPS disciplined, and furthermore the sampling is phase-locked to the voltage waveform allowing for an even more precise metric extraction. Finally each PQube device is configurable with custom thresholds which allow it to record raw PQ event data for the location it's monitoring. PQube offers a centralized data collection option with flexible communication schemes ranging from Ethernet to Cellular. Since PQube devices monitor current in conjunction to voltage, its installation requires it to be placed into the electrical box of the target, by a licensed electrician.\cite{von2014micro} Furthermore, the GPS syncronisation requires addition of extra conduit to the electrical box to allow for an antenna. Finally, since the PQube devices are design for single location measurements, distributed event detection using the PQube network is awkward, with a lot of low magnitude gridwide events being incomplete or missing. 
+
+Unlike the single point monitoring solutions, Napali method is incapable of operating as standalone PQ monitor without a cloud sink. Furthermore, even with the event detection sink, the goal of the Napali is to reject local anomalies in order to reduce the communication and computational overhead. While not as sensitive as the PQube device, the deployment price per unit is two order of magnitude lower, while providing better sensitivity then the FNet PMU alternative, when running with GPS. The ability of operating using NTP, with WIFI connectivity, means that the OPQBox deployment is much simpler then the FNet and PSL offering, without requirements of a clear view of the sky or additional wiring for Ethernet and GPS antennas. Finally the Napali distributed event detection system allows for acquisition of the entirety of the PQ disturbances including in locations where the disturbance has been greatly attenuated by the electrical distance. Thus, Napali is able to provide the complete picture of the disturbance propagation throughout the smart grid.
+
+\section{Anomaly detection in Power Quality Monitoring Networks.}
+
+Anomaly detection in PQ domain remains an active topic of research. The goal of PQ event detection is to isolate the temporal regions where the voltage or current waveform deviates from the nominal by a given threshold. In some cases the aim is to simply notify a higher level control system in a realtime that a disturbance is taking place. In other cases the goal is to acquire the raw disturbance data for off-line analysis. Most of the detection methods rely on statistics and thresholding it order to detect PQ disturbances. Most of the literature concerns itself with single point detection, for purposes of protection of equipment downstream.\cite{gu2004statistical}\cite{karimi2000wavelet} \cite{shin2006power} Distributed power quality projects will generally utilize single single point detection across multiple devices in order to get reconstruct gridwide propagation.\cite{von2014micro}
+
+With a wide deployment of smart meters, PQ researchers gained access to a networked platform which is perfectly positioned for PQ monitoring.\cite{hoglund2012using} The major issue for smart meter real time monitoring is the bandwidth constraints. Smart meter deployment is envisioned to communicate via a mesh network with a stationary or mobile base station used for data aggregation. As such the bandwidth and connectivity is limited, thus requiring methodology which is capable of event detection in such environments. Generalized local likelihood ratio detection is one method for overcoming these limitations. This approach requires only a single bit to be forwarded from each smart meter indicating whether a disturbance is taking place or not. These bits are aggregated at the "master" meter, and if their sum exceeds a threshold a higher level control system is notified of the ongoing disturbance.\cite{li2016cooperative} This approach is resilient to bandwidth limitations, and communication instability, however tunning thresholds for each individual meter requires a significant manual effort.
+
+Napali differs from the smart-meter approach is the use of WiFi for communication, which greatly improves the communication constraints of the system. Since the OPQbox is always connected to the power grid it is monitoring, power concerns are minimal. This allows Napali to implement more robust computational and communication strategies, not commonly possible with smart meter PQ monitoring.
