--- a/proposal.bib
+++ b/proposal.bib
@@ -93,3 +93,111 @@ title = {EdgeIoT: Mobile Edge Computing for the Internet of Things},
 volume = {54},
 booktitle = {IEEE Communications Magazine}
 }
+
+@inproceedings{oueis2015fog,
+  title={The fog balancing: Load distribution for small cell cloud computing},
+  author={Oueis, Jessica and Strinati, Emilio Calvanese and Barbarossa, Sergio},
+  booktitle={Vehicular Technology Conference (VTC Spring), 2015 IEEE 81st},
+  pages={1--6},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{wang2015mobiscud,
+  title={Mobiscud: A fast moving personal cloud in the mobile network},
+  author={Wang, Kaiqiang and Shen, Minwei and Cho, Junguk and Banerjee, Arijit and Van der Merwe, Jacobus and Webb, Kirk},
+  booktitle={Proceedings of the 5th Workshop on All Things Cellular: Operations, Applications and Challenges},
+  pages={19--24},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{wang2013mobile,
+  title={Mobile micro-cloud: Application classification, mapping, and deployment},
+  author={Wang, Shiqiang and Tu, Guan-Hua and Ganti, Raghu and He, Ting and Leung, Kin and Tripp, Howard and Warr, Katy and Zafer, Murtaza},
+  booktitle={Proc. Annual Fall Meeting of ITA (AMITA)},
+  year={2013}
+}
+
+@article{zhang2010wide,
+  title={Wide-area frequency monitoring network (FNET) architecture and applications},
+  author={Zhang, Yingchen and Markham, Penn and Xia, Tao and Chen, Lang and Ye, Yanzhu and Wu, Zhongyu and Yuan, Zhiyong and Wang, Lei and Bank, Jason and Burgett, Jon and others},
+  journal={IEEE Transactions on smart grid},
+  volume={1},
+  number={2},
+  pages={159--167},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{silva2017development,
+  title={Development of a monitoring system for electrical energy consumption and power quality analysis},
+  author={Silva, Pedro LM and Afonso, Jos{\'e} A and Monteiro, V{\'\i}tor Duarte Fernandes and Pinto, JG and Afonso, Jo{\~a}o L},
+  year={2017},
+  publisher={International Association of Engineers (IAENG)}
+}
+
+@online{pqube_spec,
+  title = {Pqube specifications},
+  url = {https://www.powerstandards.com/product/pqube-classic/specifications/},
+  note = {Accessed: 2018-09-30}
+}
+
+@inproceedings{von2014micro,
+  title={Micro-synchrophasors for distribution systems},
+  author={Von Meier, Alexandra and Culler, David and McEachern, Alex and Arghandeh, Reza},
+  booktitle={Innovative Smart Grid Technologies Conference (ISGT), 2014 IEEE PES},
+  pages={1--5},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{li2016cooperative,
+  title={Cooperative Change Detection for Voltage Quality Monitoring in Smart Grids.},
+  author={Li, Shang and Wang, Xiaodong},
+  journal={IEEE Trans. Information Forensics and Security},
+  volume={11},
+  number={1},
+  pages={86--99},
+  year={2016}
+}
+
+@article{gu2004statistical,
+  title={A statistical-based sequential method for fast online detection of fault-induced voltage dips},
+  author={Gu, Irene YH and Ernberg, Nichlas and Styvaktakis, Emmanouil and Bollen, Math HJ},
+  journal={IEEE Transactions on Power Delivery},
+  volume={19},
+  number={2},
+  pages={497--504},
+  year={2004},
+  publisher={IEEE}
+}
+@article{karimi2000wavelet,
+  title={Wavelet based on-line disturbance detection for power quality applications},
+  author={Karimi, Masoud and Mokhtari, Hossein and Iravani, M Reza},
+  journal={IEEE Transactions on Power Delivery},
+  volume={15},
+  number={4},
+  pages={1212--1220},
+  year={2000},
+  publisher={IEEE}
+}
+@article{shin2006power,
+  title={Power quality indices for transient disturbances},
+  author={Shin, Y-J and Powers, Edward J and Grady, Mack and Arapostathis, Ari},
+  journal={IEEE Transactions on Power Delivery},
+  volume={21},
+  number={1},
+  pages={253--261},
+  year={2006},
+  publisher={IEEE}
+}
+
+@inproceedings{hoglund2012using,
+  title={Using a 6LoWPAN smart meter mesh network for event-driven monitoring of power quality},
+  author={H{\"o}glund, Joel and Ilic, Dejan and Karnouskos, Stamatis and Sauter, Robert and Da Silva, Per Goncalves},
+  booktitle={Smart Grid Communications (SmartGridComm), 2012 IEEE Third International Conference on},
+  pages={448--453},
+  year={2012},
+  organization={IEEE}
+}
