Corrections from the two previous releases integrated into master

--- a/proposal.bib
+++ b/proposal.bib
@@ -201,3 +201,71 @@ booktitle = {IEEE Communications Magazine}
   year={2012},
   organization={IEEE}
 }
+
+@article{kahle2016power,
+  title={Power Converters and Power Quality},
+  author={Kahle, K},
+  journal={arXiv preprint arXiv:1607.01556},
+  year={2016}
+}
+
+@inproceedings{li2013monitoring,
+  title={Monitoring disturbances in smart grids using distributed sequential change detection},
+  author={Li, Shang and Wang, Xiaodong},
+  booktitle={Computational Advances in Multi-Sensor Adaptive Processing (CAMSAP), 2013 IEEE 5th International Workshop on},
+  pages={432--435},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{daponte2004transientmeter,
+  title={TransientMeter: A distributed measurement system for power quality monitoring},
+  author={Daponte, P and Di Penta, M and Mercurio, G},
+  journal={IEEE Transactions on Power Delivery},
+  volume={19},
+  number={2},
+  pages={456--463},
+  year={2004},
+  publisher={IEEE}
+}
+
+@inproceedings{suslov2014distributed,
+  title={Distributed power quality monitoring},
+  author={Suslov, KV and Solonina, NN and Smirnov, AS},
+  booktitle={Harmonics and Quality of Power (ICHQP), 2014 IEEE 16th International Conference on},
+  pages={517--520},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{won2006new,
+  title={A new algorithm to locate power-quality event source with improved realization of distributed monitoring scheme},
+  author={Won, Dong-Jun and Chung, Il-Yop and Kim, Joong-Moon and Moon, Seung-Il and Seo, Jang-Cheol and Choe, Jong-Woong},
+  journal={IEEE Transactions on Power Delivery},
+  volume={21},
+  number={3},
+  pages={1641--1647},
+  year={2006},
+  publisher={IEEE}
+}
+
+@inproceedings{parsons1998direction,
+  title={A direction finder for power quality disturbances based upon disturbance power and energy},
+  author={Parsons, Anthony C and Grady, W Mack and Powers, Edward J and Soward, John C},
+  booktitle={Harmonics and Quality of Power Proceedings, 1998. Proceedings. 8th International Conference On},
+  volume={2},
+  pages={693--699},
+  year={1998},
+  organization={IEEE}
+}
+
+@article{polajvzer2017evaluation,
+  title={Evaluation of Different Methods for Voltage Sag Source Detection},
+  author={Polaj{\v{z}}er, Bo{\v{s}}tjan and {\v{S}}tumberger, Gorazd and Seme, Sebastijan},
+  journal={Energija},
+  volume={59},
+  number={1-4},
+  pages={0--0},
+  year={2017},
+  publisher={Hrvatska elektroprivreda dd}
+}
