--- a/proposal.tex
+++ b/proposal.tex
@@ -45,6 +45,7 @@ Lipyeow Lim
 \usepackage{indentfirst}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage[hidelinks]{hyperref}
 
 \begin{document}
 \maketitle
