--- a/litreview.tex
+++ b/litreview.tex
@@ -1,5 +1,5 @@
 \section{Edge computing}
-Projections performed by forbes suggest that by 2025, more then 75 billion IOT devices will be connected to the Internet.\cite{forbesiot} As the devices at the edge become more computationally capable and more numerous, it becomes imperative to share the computational load not only across the cloud services, but across the devices themselves. Furthermore a large portion of these devices, such as home automation, do not require a connection to the cloud in the first place. Instead they require a connection to the edge IOT hub, or need the cloud service only to establish or broker communication with another IOT device. Edge computing is a subset of IOT research, which concerns itself with distributing the computational load across the devices at the edge of the of the network. \cite{satyanarayanan2017emergence}
+Projections performed by Forbes suggest that by 2025, more then 75 billion IOT devices will be connected to the Internet.\cite{forbesiot} As the devices at the edge become more computationally capable and more numerous, it becomes imperative to share the computational load not only across the cloud services, but across the devices themselves. Furthermore, a large portion of these devices, such as home automation, do not require a connection to the cloud in the first place. Instead they require a connection to the edge IOT hub, or need the cloud service only to establish or broker communication with another IOT device. Edge computing is a subset of IOT research, which concerns itself with distributing the computational load across the devices at the edge of the of the network. \cite{satyanarayanan2017emergence}
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{img/iot_statistics.pdf}	
@@ -7,7 +7,7 @@ Projections performed by forbes suggest that by 2025, more then 75 billion IOT d
 	\label{lit:fig:1}
 \end{figure}
 
-This change in computational strategy may seem inconsequential at first. However, upon deeper reflection in becomes clear that this is a major paradigm shift which brings IOT closer to the sensor network world it is often compared with. While the pioneering work in the IOT always assumed a one or two way communication between the IOT device and the cloud service, utilizing TCP/IP as an end-to-end protocol, it is becoming clear that this approach is unsustainable, and is often undesirable. This communication model has clear disadvantages in wasted communication, computation, and privacy. Furthermore the rigid computation communication model is not flexible enough to support devices which are beyond the edge of the TCP/IP network without an AD-HOC routing. \cite{gagliardi2011content}
+This change in computational strategy may seem inconsequential at first. However, upon deeper reflection it becomes clear that this is a major paradigm shift which brings IOT closer to the sensor network world it is often compared with. While the pioneering work in the IOT always assumed a one or two way communication between the IOT device and the cloud service, utilizing TCP/IP as an end-to-end protocol, it is becoming clear that this approach is unsustainable, and is often undesirable. This communication model has clear disadvantages in wasted communication, computation, and privacy. Furthermore, the rigid computation communication model is not flexible enough to support devices which are beyond the edge of the TCP/IP network without an AD-HOC routing. \cite{gagliardi2011content}
 
 The first attempt to address the bandwidth and latency issues arising with the widespread IOT adoption came in form of content delivery networks(CDNs).\cite{gagliardi2011content} CDNs circumvent the generic cloud information delivery problems by placing transparent caches geographically spread across the application domain as shown in figure \ref{lit:fig:2}. When a user or an IOT device makes a request for on object, this request is forwarded to the nearest CDN node for processing. If the node contains the object in it's cache it is immediately forwarded to the requestee. Otherwise a request for the object is forwarded to the centralized cloud data store, and returned to the requesting device, as well as placed in the local cache. This approach has the advantage of moving the data closer to the end user, thus reducing latency, and taking advantage of the geographical locality. Another advantage of this method, is the added resiliency of the CDN architecture to single point failure. If a local cache node fails, it`s userbase, can be forwarded to another node, although encoring additional latency. Additionally if a centralized data store becomes unreachable, the local cache nodes can to some extent mask it's outage by forwarding the data available locally. This approach does have some drawbacks. While it makes it easier to enable faster transactions regarding data, it is not trivial to move application logic to the local cache nodes. Furthermore, CDN methodology, still relies on a central mediator for device communication, even if the devices are located in the same room. 
 
@@ -18,7 +18,7 @@ The first attempt to address the bandwidth and latency issues arising with the w
 	\label{lit:fig:2}
 \end{figure}
 
-In an attempt to support a more diverse IOT ecosystem, current research is focused on moving the cloud service ever closer to the edge of the network. Since the majority of the IOT devices are located withing one hop of the Internet, the next logical place to locate a content provider is at the wireless basestation.\cite{satyanarayanan2017emergence} These servers, commonly referred to as cloudlets or fog servers, are collocated with various wireless basestation, which allows them to provide a location specific service to the user without using the Internet. This approach also provides uniform access and simplifies intercommunication between a variety of devices, including those that don't use TCP/IP. Unlike the localized cloud cache approach relied on by the CDNs, fog servers are build with the notion of moving not only data but also the application logic to the edge of the network. To facilitate inter-device communication between the devices using differing wireless protocols fog servers can no longer rely on TCP/IP routing. Instead, TCP/IP becomes yet another transfer protocol along with bluetooth, zigbee, 3g etc , with routing between the devices implemented as a software service.\cite{edgeiot} A few use-cases of such technology are already found in industry. Examples of these include airline/bus in-flight entertainment, and shopping mall directory apps. An block diagram of this infrastructure is shown in figure \ref{lit:fig:3}. In the future emerging technologies which are sensitive to latency, such as virtual and augmented reality will benefit from fog computing, since it's inherently lower latency then the cloud counterparts.
+In an attempt to support a more diverse IOT ecosystem, current research is focused on moving the cloud service ever closer to the edge of the network. Since the majority of the IOT devices are located withing one hop of the Internet, the next logical place to locate a content provider is at the wireless basestation.\cite{satyanarayanan2017emergence} These servers, commonly referred to as cloudlets or fog servers, are collocated with various wireless basestation, which allows them to provide a location specific service to the user without using the Internet. This approach also provides uniform access and simplifies intercommunication between a variety of devices, including those that don't use TCP/IP. Unlike the localized cloud cache approach relied on by the CDNs, fog servers are build with the notion of moving not only data but also the application logic to the edge of the network. To facilitate inter-device communication between the devices using differing wireless protocols fog servers can no longer rely on TCP/IP routing. Instead, TCP/IP becomes yet another transfer protocol along with Bluetooth, Zigbee, 3g etc , with routing between the devices implemented as a software service.\cite{edgeiot} A few use-cases of such technology are already found in industry. Examples of these include airline/bus in-flight entertainment, and shopping mall directory apps. An block diagram of this infrastructure is shown in figure \ref{lit:fig:3}. In the future emerging technologies which are sensitive to latency, such as virtual and augmented reality will benefit from fog computing, since it's inherently lower latency then the cloud counterparts.
 
 \begin{figure}[h]
 	\centering
@@ -33,11 +33,11 @@ Napali fits in between the CDN and Fog server architectures. The power quality d
 
 \section{Distributed Power Quality Monitoring}
 
-Power quality monitoring is a long established field in the smart grid domain. However, the vast majority of research so far has been focused on single point power quality monitoring.\cite{silva2017development} Such research has extremely useful applications in industry, since it allows to ascertain the absolute quality of the delivered power at a given location. However, since the power quality disturbances originate both from local sources, and gridwide disturbances single point monitoring is not particularly useful for smart grid research. Several projects have developed a distributed approach to power quality monitoring, the most prominent being the FNet project and the Power Standard Lab pqube deployment. 
+Power quality monitoring is a long established field in the smart grid domain. However, the vast majority of research so far has been focused on single point power quality monitoring.\cite{silva2017development} Such research has extremely useful applications in industry, since it allows to ascertain the absolute quality of the delivered power at a given location. However, since the power quality disturbances originate both from local sources, and gridwide disturbances single point monitoring is not particularly useful for smart grid research. Several projects have developed a distributed approach to power quality monitoring, the most prominent being the FNet project and the Power Standard Lab PQube deployment. 
 
-The FNet project designed, manufactured and deployed a Phase Measuremnt Unit(PMU), across over 300 locations across the united states.\cite{zhang2010wide} PMU devices plug into an outlet, and sample the power line voltage at the rate of about 1.5kS/s. The sampling is disciplined by GPS, and as such FNet devices are extremely sensitive to voltage frequency and phase angle. The precision of the FNet devices is $~0.5mHz$ for frequency and $0.02^{\circ}$ for phase angle. Collected data is sent to the collection service at 100ms intervals via the Ethernet connection. Using these devices FNet was able to observe several large power disturbances in the US power grid. The robustness and sensitivity afforded by the GPS reciever makes this project an excellent source of frequency data across large geographical area, however,  the sampling rate of 25sampler per grid cycle is far too low to properly sample fast transients and sags. Furthermore, FNet provides no methodology for acquiring raw data for event disturbances which it records.
+The FNet project designed, manufactured and deployed a Phase Measuremnt Unit(PMU), across over 300 locations across the united states.\cite{zhang2010wide} PMU devices plug into an outlet, and sample the power line voltage at the rate of about 1.5kS/s. The sampling is disciplined by GPS, and as such FNet devices are extremely sensitive to voltage frequency and phase angle. The precision of the FNet devices is $~0.5mHz$ for frequency and $0.02^{\circ}$ for phase angle. Collected data is sent to the collection service at 100ms intervals via the Ethernet connection. Using these devices FNet was able to observe several large power disturbances in the US power grid. The robustness and sensitivity afforded by the GPS receiver makes this project an excellent source of frequency data across large geographical area, however,  the sampling rate of 25sampler per grid cycle is far too low to properly sample fast transients and sags. Furthermore, FNet provides no methodology for acquiring raw data for event disturbances which it records.
 
-Power Standards Lab(PSL) has been an industry leader in power quality monitoring, authoring several standards on the topic. Furthermore PSL has developed and deployed a large number of power quality monitors called PQube across the world. The exact number of deployed devices is uncertain since a lot of the devices are deployed industrially and are not available to the public. However PSL has several publicly available devices, as well as several PQ datasets accessable for smart grid researchers. PQube devices are an industry standard for power quality monitoring, sampling at $12.8kSps$ for both the voltage and current waveforms.\cite{pqube_spec} Each PQube device is supplied with a NIST certificate of compliance and complies with the IEC 61000-4-7:2002 standard for PQ measurements. Incidentally, this standard was authored in part by the PSL staff. Similarly to the FNet PMU, PQube devices are GPS disciplined, and furthermore the sampling is phase-locked to the voltage waveform allowing for an even more precise metric extraction. Finally each PQube device is configurable with custom thresholds which allow it to record raw PQ event data for the location it's monitoring. PQube offers a centralized data collection option with flexible communication schemes ranging from Ethernet to Cellular. Since PQube devices monitor current in conjunction to voltage, its installation requires it to be placed into the electrical box of the target, by a licensed electrician.\cite{von2014micro} Furthermore, the GPS syncronisation requires addition of extra conduit to the electrical box to allow for an antenna. Finally, since the PQube devices are design for single location measurements, distributed event detection using the PQube network is awkward, with a lot of low magnitude gridwide events being incomplete or missing. 
+Power Standards Lab(PSL) has been an industry leader in power quality monitoring, authoring several standards on the topic. Furthermore, PSL has developed and deployed a large number of power quality monitors called PQube across the world. The exact number of deployed devices is uncertain since a lot of the devices are deployed industrially and are not available to the public. However PSL has several publicly available devices, as well as several PQ datasets accessible for smart grid researchers. PQube devices are an industry standard for power quality monitoring, sampling at $12.8kSps$ for both the voltage and current waveforms.\cite{pqube_spec} Each PQube device is supplied with a NIST certificate of compliance and complies with the IEC 61000-4-7:2002 standard for PQ measurements. Incidentally, this standard was authored in part by the PSL staff. Similarly to the FNet PMU, PQube devices are GPS disciplined, additionally the sampling is phase-locked to the voltage waveform allowing for an even more precise metric extraction. Finally each PQube device is configurable with custom thresholds which allow it to record raw PQ event data for the location it's monitoring. PQube offers a centralized data collection option with flexible communication schemes ranging from Ethernet to Cellular. Since PQube devices monitor current in conjunction to voltage, its installation requires it to be placed into the electrical box of the target, by a licensed electrician.\cite{von2014micro} Furthermore, the GPS synchronization requires addition of extra conduit to the electrical box to allow for an antenna. Finally, since the PQube devices are design for single location measurements, distributed event detection using the PQube network is awkward, with a lot of low magnitude gridwide events being incomplete or missing. 
 
 Unlike the single point monitoring solutions, Napali method is incapable of operating as standalone PQ monitor without a cloud sink. Furthermore, even with the event detection sink, the goal of the Napali is to reject local anomalies in order to reduce the communication and computational overhead. While not as sensitive as the PQube device, the deployment price per unit is two order of magnitude lower, while providing better sensitivity then the FNet PMU alternative, when running with GPS. The ability of operating using NTP, with WIFI connectivity, means that the OPQBox deployment is much simpler then the FNet and PSL offering, without requirements of a clear view of the sky or additional wiring for Ethernet and GPS antennas. Finally the Napali distributed event detection system allows for acquisition of the entirety of the PQ disturbances including in locations where the disturbance has been greatly attenuated by the electrical distance. Thus, Napali is able to provide the complete picture of the disturbance propagation throughout the smart grid.
 
@@ -47,4 +47,6 @@ Anomaly detection in PQ domain remains an active topic of research. The goal of 
 
 With a wide deployment of smart meters, PQ researchers gained access to a networked platform which is perfectly positioned for PQ monitoring.\cite{hoglund2012using} The major issue for smart meter real time monitoring is the bandwidth constraints. Smart meter deployment is envisioned to communicate via a mesh network with a stationary or mobile base station used for data aggregation. As such the bandwidth and connectivity is limited, thus requiring methodology which is capable of event detection in such environments. Generalized local likelihood ratio detection is one method for overcoming these limitations. This approach requires only a single bit to be forwarded from each smart meter indicating whether a disturbance is taking place or not. These bits are aggregated at the "master" meter, and if their sum exceeds a threshold a higher level control system is notified of the ongoing disturbance.\cite{li2016cooperative} This approach is resilient to bandwidth limitations, and communication instability, however tunning thresholds for each individual meter requires a significant manual effort.
 
-Napali differs from the smart-meter approach is the use of WiFi for communication, which greatly improves the communication constraints of the system. Since the OPQbox is always connected to the power grid it is monitoring, power concerns are minimal. This allows Napali to implement more robust computational and communication strategies, not commonly possible with smart meter PQ monitoring.
+Systems designed for distributed PQ event detection using custom meters are prevalent in literature. A study at CERN utilized PQUbe devices with gapless recording which were later analyzed off-line, in order to ascertain the propagation mechanics of PQ events.\cite{kahle2016power} In a realtime domain Shang Li and Xiaodong Wang extended their work in \cite{li2016cooperative} from smart meters to standalone devices, again advocating for single bit statistical based triggering generated by asynchronous meters.\cite{li2013monitoring} Unfortunately their work has never been verified beyond simulation. Transimeter, project utilized an analog hardware event detector comprised of a high pass filter and a comparator for transient detection. These devices had two data paths for the voltage waveform, one to the National Instruments DAC board, one to the hardware trigger circuit. If a trigger circuit detected a transient a flag was set on the NI DAC which would in turn instruct the connected PC to send the data to the central server.\cite{daponte2004transientmeter} Unfortunately, the lack of cooperative detection and an inflexible trigger circuit makes this approach unappealing for modern power quality monitoring. Some of the more exciting work In PQ detection is modeling the most efficient placement of PQ meters in order to provide complete coverage for the power grid. \cite{won2006new} As well as using distributed detection for localization of the event source.\cite{parsons1998direction} \cite{polajvzer2017evaluation}
+
+Napali differs from the smart-meter approach is the use of WiFi for communication, which greatly improves the communication constraints of the system. Since the OPQbox is always connected to the power grid it is monitoring, power concerns are minimal. This allows Napali to implement more robust computational and communication strategies, not commonly possible with smart meter PQ monitoring. Since the triggering stream is generated in software, it is possible to switch the detection metrics without redesigning new hardware. Napali combines both cooperative PQ event detection and PQ event acquisition which makes it extremely useful for future PQ event localization, and propagation research. \cite{parsons1998direction} \cite{polajvzer2017evaluation}
