First Draftgit add -ugit add -ugit add -u

--- a/proposal.bib
+++ b/proposal.bib
@@ -269,3 +269,31 @@ booktitle = {IEEE Communications Magazine}
   year={2017},
   publisher={Hrvatska elektroprivreda dd}
 }
+
+@article{kumar2015power,
+  title={Power quality event generation in MATLAB/Simulink environment},
+  author={Kumar, V and Kaur, M},
+  journal={International Journal of Advanced Research in Electrical, Electronics and Instrumentation Engineering},
+  volume={4},
+  number={7},
+  pages={6055--6059},
+  year={2015}
+}
+
+@inproceedings{muhamad2007effects,
+  title={The effects of power quality to the industries},
+  author={Muhamad, Mohd Izhwan and Mariun, Norman and Radzi, Mohd Amran Mohd},
+  booktitle={Research and Development, 2007. SCOReD 2007. 5th Student Conference on},
+  pages={1--4},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{tan2013simulation,
+  title={Simulation of power quality events using Simulink model},
+  author={Tan, Rodney HG and Ramachandaramurthy, VK},
+  booktitle={Power Engineering and Optimization Conference (PEOCO), 2013 IEEE 7th International},
+  pages={277--281},
+  year={2013},
+  organization={IEEE}
+}
